Integrate codecov to circleci

--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,7 @@ test:
     - go vet ./...
     - go get github.com/jstemmer/go-junit-report
   override:
-    - go test -v ./... | go-junit-report > $CIRCLE_TEST_REPORTS/report.xml
+    #- go test -v ./... | go-junit-report > $CIRCLE_TEST_REPORTS/report.xml
+    - go test -v ./... -race -coverprofile=coverage.txt -covermode=atomic
   post:
     - bash <(curl -s https://codecov.io/bash)
