--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,12 @@ jobs:
     steps:
       - checkout
       - run: go get -v -t -d ./...
-      - run: go test -v ./...
+      - run: go get github.com/jstemmer/go-junit-report
+      - run:
+        name: Unit Tests
+        command: |
+            trap "go-junit-report <${TEST_RESULTS}/go-test.out > ${TEST_RESULTS}/go-test-report.xml" EXIT
+            go test -v ./... | tee ${TEST_RESULTS}/go-test.out
       - store_artifacts:
           path: /tmp/test-results
           destination: raw-test-output
