circleci go-junit-report

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,8 @@ jobs:
       - run:
           name: Unit Tests
           command: |
-              trap "go-junit-report <${TEST_RESULTS}/go-test.out > ${TEST_RESULTS}/go-test-report.xml" EXIT
-              go test -v ./... | tee ${TEST_RESULTS}/go-test.out
+              trap "go-junit-report </tmp/test-results/go-test.out > /tmp/test-results/go-test-report.xml" EXIT
+              go test -v ./... | tee /tmp/test-results/go-test.out
             
             
       - store_artifacts:
