--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,15 +5,19 @@ jobs:
       - image: circleci/golang:1.9
     resource_class: small
     working_directory: /go/src/github.com/pradeepg26/sifuconf
+    environment: # environment variables for the build itself
+      TEST_RESULTS: /tmp/test-results # path to where test results will be saved
+
     steps:
       - checkout
+      - run: mkdir -p $TEST_RESULTS # create the test results directory
       - run: go get -v -t -d ./...
       - run: go get github.com/jstemmer/go-junit-report
       - run:
           name: Unit Tests
           command: |
-              trap "go-junit-report </tmp/test-results/go-test.out > /tmp/test-results/go-test-report.xml" EXIT
-              go test -v ./... | tee /tmp/test-results/go-test.out
+              trap "go-junit-report <${TEST_RESULTS}/go-test.out > ${TEST_RESULTS}/go-test-report.xml" EXIT
+              go test -v ./... | tee ${TEST_RESULTS}/go-test.out
             
             
       - store_artifacts:
